src/objects/Renewal_Opportunities_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>BDRUser__c</fullName>
        <label>Business Development Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_status__c</fullName>
        <label>Customer Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edu_Act__c</fullName>
        <label>Edu Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edu_Fcst__c</fullName>
        <label>Edu Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edu_Pipe__c</fullName>
        <label>Edu Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exp_Cons_Act__c</fullName>
        <label>Exp Cons Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exp_Cons_Fcst__c</fullName>
        <label>Exp Cons Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exp_Cons_Pipe__c</fullName>
        <label>Exp Cons Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fcst__c</fullName>
        <label>Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Eng_Type__c</fullName>
        <label>GA Eng Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Originator_Mgr__c</fullName>
        <label>Lead Originator Mgr</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Forecast__c</fullName>
        <label>License Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License_K__c</fullName>
        <label>License $K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_License_Fcst__c</fullName>
        <label>Net License Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_District__c</fullName>
        <label>District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Field_Portal_ID__c</fullName>
        <label>Field Portal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_GA_Representative__c</fullName>
        <label>Partner Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Gross_Cloud_converted__c</fullName>
        <label>Gross Cloud</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Gross_Support_converted__c</fullName>
        <label>Gross Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Host_Act__c</fullName>
        <label>Host Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Host_Fcst__c</fullName>
        <label>Host Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Host_Pipe__c</fullName>
        <label>Host Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Lead_Originator__c</fullName>
        <label>Originator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Manager_Lvl_1__c</fullName>
        <label>Manager (Lvl 1)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Mx_Act__c</fullName>
        <label>Mx Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Mx_Fcst__c</fullName>
        <label>Mx Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Mx_Pipe__c</fullName>
        <label>Mx Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Opportunities Snapshots</relationshipLabel>
        <relationshipName>Renewal_Opportunities_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Pipe__c</fullName>
        <label>Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Primary_SE__c</fullName>
        <label>Sales Engineer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Primary_Services_Director__c</fullName>
        <label>Services Director</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Quality__c</fullName>
        <label>Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Quarter_View__c</fullName>
        <formula>IF(
(TEXT(YEAR(Ren_Snap_Close_Date__c)) &amp; &quot;Q&quot; &amp; TEXT(FLOOR(((MONTH( Ren_Snap_Close_Date__c )-1)/3)+1))) = (TEXT(YEAR(DATEVALUE( CreatedDate ))) &amp; &quot;Q&quot; &amp; TEXT(FLOOR(((MONTH(DATEVALUE( CreatedDate ))-1)/3)+1))),TRUE,FALSE)</formula>
        <label>Quarter View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Ren_Act__c</fullName>
        <label>Ren Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Ren_Fcst__c</fullName>
        <label>Ren Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Ren_Pipe__c</fullName>
        <label>Ren Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Renewal_converted__c</fullName>
        <label>Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Stage__c</fullName>
        <label>Stage</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Subs_Act__c</fullName>
        <label>Subs Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Subs_Fcst__c</fullName>
        <label>Subs Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Subs_Pipe__c</fullName>
        <label>Subs Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Supp_Pipe__c</fullName>
        <label>Supp Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ren_Snap_Type__c</fullName>
        <label>Type</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Excl_Host__c</fullName>
        <label>Renewal Excl. Host</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <formula>IF(
MONTH(DATEVALUE(CreatedDate))&lt;10,
&quot;0&quot;+(TEXT(MONTH(DATEVALUE(CreatedDate)))),
(TEXT(MONTH(DATEVALUE(CreatedDate)))))
+ &quot;/&quot; +
IF(
DAY(DATEVALUE(CreatedDate))&lt;10,
&quot;0&quot;+(TEXT(DAY(DATEVALUE(CreatedDate)))),
(TEXT(DAY(DATEVALUE(CreatedDate)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Renewal_Snapshot_Support_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tot_Cons_Act__c</fullName>
        <label>Tot Cons Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tot_Cons_Fcst__c</fullName>
        <label>Tot Cons Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tot_Cons_Pipe__c</fullName>
        <label>Tot Cons Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Renewal Opportunities Snapshot</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Renewal Opportunities Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Opportunities Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>